--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Payoo Banking</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5.0.0-beta.8/daisyui.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="styles/style.css">
@@ -82,7 +83,6 @@
         <section id="add-money-section" class="mt-10 px-4 pb-15">
             <div>
                 <h3 class="text-xl font-bold mb-2">Add Money</h3>
-                <!-- <h4>View All</h4> -->
             </div>
             <!-- add money form -->
             <div class="hero-content flex-col lg:flex-row-reverse">
@@ -247,7 +247,7 @@
         <!-- Transaction History Section-->
         <section id="txn-history-section" class="mt-10 px-4 pb-15">
             <div class="flex justify-between mb-4">
-                <h3 class="text-xl font-bold mb-2">Transaction History</h3>
+                <h3 id="txn-history-title" class="text-xl font-bold mb-2">Transaction History</h3>
                 <h3 class="text-base mb-2">View all</h3>
             </div>
             <!-- Transaction history card -->
@@ -329,7 +329,7 @@
                                 </div>
                                 <div class="space-y-1">
                                     <h3 class="text-sm font-bold text-[#080808B3]">Get Bonus</h3>
-                                    <h3 class="text-base font-semibold text-[#080808B3]">01701301901</h3>
+                                    <h3 class="text-base font-semibold text-[#080808B3]">You got a Gift!!!</h3>
                                     <p class="text-sm">TrxID: CB01587452</p>
                                 </div>
                             </div>
